--- a/soil_type_class.ipynb
+++ b/soil_type_class.ipynb
@@ -18,12 +18,34 @@
         "id": "80645505-a41a-4da4-af63-8c7c1b883f1e"
       },
       "source": [
-        "#Set Up Worksheet and Import Libraries"
+        "# Motivations\n",
+        "\n",
+        "Interpreting soil type and properties from in-situ testing and measurement data is one of the daily tasks in my field. The most uniquitous, or perhaps the first to be standardized (i.e., ASTM),\n",
+        "is the Standard Penetration Test (SPT). The SPT test method retrieves soil samples and blowcounts in three consecutive 6 inches, of which the blowcounts of the first 6 inches are neglected as disturbed.\n",
+        "The sum of the second and last blowcounts is termed the \"standard penetration resistance,\" or N-value, which has been extensively studied and empirically correlated to the stiffness or density of specific soil types.\n",
+        "In this context, soil type refers to coarse- and fine-grained soils, i.e., sand and clay. Five (5) or \"1-2-3\" blowcount soil, for instance,\n",
+        "is regarded as loose sand or medium stiff clay. However, unless the recovered soil sample is visually categorized or verified through additional testing, it is unknown whether the soil type is sand or clay.\n",
+        "In practice, blowcounts are not used for determining soil type.\n",
+        "\n",
+        "This project explored the potential of identifying soil type based on sampling depths and blowcounts, contrary to general practice. The logic behind this is that if drilling mud is used to lessen soil disturbance or stress relief,\n",
+        "the blowcounts, assuming that the SPT hammer system is properly calibrated and operated at the accepted 60% or higher energy ratio, would correlate strongly to soil type.\n",
+        "Depth is an important factor as it represents the state of stress of the soil element. In addition, the neglected blowcounts from the first 6 inches of spoon could potentially serve as a valuable\n",
+        "indicator for different soil types."
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Set Up Worksheet and Import Libraries"
+      ],
+      "metadata": {
+        "id": "a3CjuvxX7uTo"
+      },
+      "id": "a3CjuvxX7uTo"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "cc196c82-4f4d-4c3b-b5d2-28cdd0cfaec0",
       "metadata": {
         "tags": [],
@@ -82,7 +104,7 @@
         }
       },
       "id": "D0gzxvSM9MDn",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +135,7 @@
         }
       },
       "id": "S6lsh6IXccEh",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "00f230ac-ce90-4a03-8911-21154c6f6075",
       "metadata": {
         "colab": {
@@ -650,7 +672,7 @@
         "id": "7xjzMxIjZI7n"
       },
       "id": "7xjzMxIjZI7n",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -677,7 +699,7 @@
         }
       },
       "id": "VF5Bj12QoPPX",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1167,7 @@
         "outputId": "fb0e474a-9860-4f13-db09-681c2a4bbe42"
       },
       "id": "FWukdPC0V-24",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1195,7 +1217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "4d299f55-1f2b-4607-a3ac-92f9fb4c5937",
       "metadata": {
         "tags": [],
@@ -1541,7 +1563,7 @@
         }
       },
       "id": "drh3Bg170Dp0",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1590,7 +1612,7 @@
         }
       },
       "id": "LH77vHK903Ql",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1616,7 +1638,7 @@
         }
       },
       "id": "IeAehzEm3AdE",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1668,7 +1690,7 @@
         }
       },
       "id": "mgDmOF503iRU",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1709,7 +1731,7 @@
         }
       },
       "id": "TjHnW3RW3r0W",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
