--- a/soil_type_class.ipynb
+++ b/soil_type_class.ipynb
@@ -1149,7 +1149,7 @@
       },
       "source": [
         "# Data Visualization\n",
-        "Let's take a look at the data: The upper plot is for Clay (y=0) and the lower is for Sand (y=1). When SPT-N is plotted against depths, we see two clusters of data. Clay data points tend to skew toward lower blowcount, while Sand data points spread across the range from 0 to 200. This is great because we can draw a boundary line between these two clusters."
+        "Let's take a look at the data: The upper plot is for Clay (y=0) and the lower is for Sand (y=1). When SPT-N is plotted against depths, we see two clusters of data. Clay data points tend to skew toward lower blowcount, while Sand data points spread across the range from 0 to 200. This is great because we can clearly draw a boundary line in between these two clusters."
       ]
     },
     {
@@ -1164,12 +1164,7 @@
         "class_1 = \"Sand (y=1)\" # pos\n",
         "class_0 = \"Clay (y=0)\" # neg\n",
         "\n",
-        "positive = Xi.loc[Xi[\"Class\"] == 1]\n",
-        "negative = Xi.loc[Xi[\"Class\"] == 0]\n",
-        "\n",
-        "# Plot examples\n",
-        "plt.plot(positive[\"Depth\"], positive[\"SPT_N\"], 'k+', label=class_1) # x=depth, y=SPT-N\n",
-        "plt.plot(negative[\"Depth\"], negative[\"SPT_N\"], 'yo', label=class_0) # x=depth, y=SPT-N\n",
+        "plot_data(Xi, class_0, class_1)\n",
         "\n",
         "plt.xlabel(\"Depth (ft)\")\n",
         "plt.ylabel(\"SPT-N\")\n",
